unpackaged/main/default/objects/Fund_and_Budget__c/Fund_and_Budget__c.object-meta.xml
<CustomObject>
    <label>Fund and Budget</label>
    <nameField>
        <displayFormat>FB-{000000}</displayFormat>
        <label>Fund and Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funds and Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>