unpackaged/main/default/objects/Fund_and_Budget__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( NOT(ISBLANK(Override_Amount__c )),
Override_Amount__c,
 Budget_Allocation__r.Amount     *  Contributing_Fund__r.Grant_Amount_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>