unpackaged/main/default/objects/Fund_and_Budget__c/fields/Budget_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Allocation</label>
    <referenceTo>BudgetAllocation</referenceTo>
    <relationshipLabel>Funds and Budgets</relationshipLabel>
    <relationshipName>Funds_and_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>