unpackaged/main/default/objects/Fund_and_Budget__c/fields/Contributing_Fund__c.field-meta.xml
<CustomField>
    <fullName>Contributing_Fund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contributing Fund</label>
    <referenceTo>Contributing_Fund__c</referenceTo>
    <relationshipLabel>Funds and Budgets</relationshipLabel>
    <relationshipName>Funds_and_Budgets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>