unpackaged/main/default/objects/Fund_and_Budget__c/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <formula>Contributing_Fund__r.Awarded_Grant__r.Docket__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docket</label>
    <type>Text</type>
</CustomField>