unpackaged/main/default/objects/Fund_and_Budget__c/fields/Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>Override_Amount__c</fullName>
    <inlineHelpText>Used if the Fund &amp; Budget records need to be setup to direct funds to specific payments.</inlineHelpText>
    <label>Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>